# ghga-transpiler

./: .description.md  .ghga_transpiler.yaml  .mandatory_files_ignore  .mypy.ini  .pre-commit-config.yaml  .readme_template.md  .static_files  .static_files_ignore  Dockerfile  README.md  config_schema.json  config_spreadsheet.yaml  example_config.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: cd.yaml  pypi_publish.yaml  tests.yaml
.pyproject_generation/: pyproject_custom.toml  pyproject_template.toml
.template/: mandatory_files_ignore.txt  static_files_ignore.txt
example_data/: a_workbook.xlsx  datapack.json  datapack.yaml  ghga_submission.xlsx
ghga_transpiler/: __init__.py  __main__.py  cli.py  config.py  config_loader.py  core.py  io.py  models.py  process_workbook.py
ghga_transpiler/api/: main.py
ghga_transpiler/config/: __init__.py  config.py  exceptions.py
ghga_transpiler/config/configs/: v1.0.yaml  worksheet_config_v1.0.yaml
ghga_transpiler/configs/: 0.0.1.yaml  0.10.0.yaml  1.0.0.yaml
ghga_transpiler/core/: __init__.py  convert.py  core.py  exceptions.py
lock/: requirements-dev.in  requirements-dev.txt  requirements.txt
scripts/: config_schema.py  update_pyproject.py  update_readme.py
scripts/script_utils/: deps.py  fastapi_app_location.py
src/ghga_transpiler/: __init__.py  __main__.py  cli.py  config.py  core.py  datapack.py  exceptions.py  io.py  metasheet_parser.py  models.py  parse.py  transformations.py  transpile.py  transpiler_io.py  utils.py  workbook_parser.py
src/ghga_transpiler/config/: __init__.py  config.py
src/ghga_transpiler/configs/: 0.10.0.yaml  1.0.0.yaml  1.1.0.yaml  1.2.yaml  2.0.yaml  2.1.yaml
tests/: __init__.py  test_convert_workbook.py  test_core.py  test_create_config.py  test_create_workbook_config.py  test_io.py  test_process_workbook.py
tests/fixtures/: __init__.py  utils.py
tests/fixtures/configs/: 0.0.0.yaml  0.0.yaml
tests/fixtures/test_data/: test.xlsx
tests/fixtures/test_data_objects/: __init__.py  config_objects.py  conversion_data.py  test_data_objects.py
tests/fixtures/workbooks/: a_workbook.xlsx
