# Copyright 2021 - 2023 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
# Please adapt to package name:
name = ghga_transpiler
version = attr: ghga_transpiler.__version__
description = GHGA-Transpiler - GHGA metadata XLSX to JSON transpilation
url = https://github.com/ghga-de/ghga-transpiler
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # Please adapt to the current versions of the libraries
    # and remove the unneeded libraries and extras:

    anyio==3.7.1
    astroid==2.15.6
    attrs==23.1.0
    bandit==1.7.4
    black==23.1.0
    certifi==2023.7.22
    cfgv==3.3.1
    charset-normalizer==3.2.0
    click==8.1.3
    coverage==7.2.7
    defusedxml==0.7.1
    deprecation==2.1.0
    dill==0.3.7
    distlib==0.3.7
    dnspython==2.4.1
    docker==6.1.3
    et-xmlfile==1.1.0
    exceptiongroup==1.1.2
    filelock==3.12.2
    flake8==6.0.0
    ghga-transpiler==1.1.0
    gitdb==4.0.10
    GitPython==3.1.32
    gprof2dot==2022.7.29
    h11==0.14.0
    httpcore==0.16.3
    httpx==0.23.3
    identify==2.5.26
    idna==3.4
    iniconfig==2.0.0
    isort==5.12.0
    jsonschema2md==0.4.0
    kafka-python==2.0.2
    lazy-object-proxy==1.9.0
    mccabe==0.7.0
    mypy==1.0.0
    mypy-extensions==1.0.0
    nodeenv==1.8.0
    openpyxl==3.1.2
    packaging==23.1
    pathspec==0.11.2
    pbr==5.11.1
    platformdirs==3.10.0
    pluggy==1.2.0
    pre-commit==3.1.1
    pycodestyle==2.10.0
    pydantic==1.10.6
    pyflakes==3.0.1
    pylint==2.16.4
    pymongo==4.4.1
    pytest==7.2.0
    pytest-asyncio==0.20.3
    pytest-cov==4.0.0
    pytest-httpx==0.21.3
    pytest-profiling==1.7.0
    PyYAML==6.0.1
    requests==2.28.2
    rfc3986==1.5.0
    six==1.16.0
    smmap==5.0.0
    snakeviz==2.2.0
    sniffio==1.3.0
    stevedore==5.1.0
    stringcase==1.2.0
    testcontainers==3.4.1
    tomli==2.0.1
    tomlkit==0.12.1
    tornado==6.3.2
    typer==0.7.0
    typing_extensions==4.7.1
    urllib3==1.26.15
    virtualenv==20.24.2
    websocket-client==1.6.1
    wrapt==1.15.0

python_requires = >= 3.9

[options.package_data]
* = *.yaml

[options.entry_points]
# Please adapt to package name:
console_scripts =
    ghga-transpiler = ghga_transpiler.__main__:run

[options.extras_require]
all =

[options.packages.find]
exclude = tests
